--- a/style.css
+++ b/style.css
@@ -20,20 +20,20 @@ body {
   border-radius: 16px;
   background: transparent;
   /* box-shadow: 0px 0px 15px rgba(113, 115, 119, 0.6); */
-  box-shadow: 0px 0px 15px gold;
+  box-shadow: 0px 0px 15px lightblue;
 }
 .equalBtn {
   /* background-color: #6dee; */
-  background-color: gold;
+  background-color: lightblue;
 }
 .operator {
   /* color: #6dee; */
-  color: gold;
+  color: lightblue;
 }
 
 input::placeholder {
   /* color: #ffffff; */
-  color: gold;
+  color: lightblue;
 }
 input {
   width: 320px;
@@ -46,7 +46,7 @@ input {
   text-align: right;
   cursor: pointer;
   /* color: #ffffff; */
-  color: gold;
+  color: lightblue;
 
 }
 button {
@@ -58,7 +58,6 @@ button {
   background: transparent;
   color: #ffffff;
   font-size: 20px;
-  /* box-shadow: -1px -1px 8px #6dee; */
-  box-shadow: -1px -1px 8px gold;
+  box-shadow: -1px -1px 8px lightblue;
   cursor: pointer;
 }
